# mpm-explosion

./: .gitignore  pyproject.toml
assets/blender/: cube.blend
scripts/: run_preprocess.py  run_simulation.py
src/mpm_explosion/: utils.py
src/mpm_explosion/preprocess/: __init__.py  io.py  normalize.py  sample_mesh.py  tagging.py  voxelize.py
src/mpm_explosion/simulation/: mls_mpm.py
tests/: test_sample_mesh.py
